--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,3 +5,4 @@ image:
 vscode:
   extensions:
     - contextmapper.context-mapper-vscode-extension@5.13.0:gvdR0EGzTImP4QJvjK06ug==
+    - jebbs.plantuml@2.13.12:LcphKtCbPTIScvq6ELiS8Q==
