--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,5 +4,5 @@ image:
   file: .gitpod.Dockerfile
 vscode:
   extensions:
-    - jebbs.plantuml@2.13.12:LcphKtCbPTIScvq6ELiS8Q==
     - contextmapper.context-mapper-vscode-extension
+    - jebbs.plantuml
