--- a/ArquitecturaHexagonal/PropiedadesdelosAlpes/requirements.txt
+++ b/ArquitecturaHexagonal/PropiedadesdelosAlpes/requirements.txt
@@ -4,5 +4,6 @@ marshmallow==3.13.0
 SQLAlchemy==1.4.44
 Werkzeug==2.2.2
 pulsar-client==3.4.0
+pulsar-client[avro]==3.4.0
 PyDispatcher==2.0.6
 uuid==1.30
