feat: event sourcing test

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -19,6 +19,7 @@ tasks:
     init: > 
       mkdir -p data/bookkeeper && 
       mkdir -p data/zookeeper && 
+      mkdir -p data/mysql && 
       sudo chmod -R 777 ./data &&
       sudo chmod -R 777 ./conectors
   - name: Pull el Docker compose
