--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,8 +95,30 @@ services:
     ports:
       - "6650:6650"
       - "8080:8080"
+    volumes:
+      - ./connectors/pulsar:/pulsar/connectors
     command: bash -c "bin/apply-config-from-env.py conf/broker.conf
       &&  exec bin/pulsar broker"
+
+  # MySQL8
+  db:
+    image: mysql:8
+    hostname: mysqldb
+    container_name: mysqldb
+    cap_add:
+      - SYS_NICE
+    restart: always
+    environment:
+      - MYSQL_DATABASE=propiedades
+      - MYSQL_ROOT_PASSWORD=adminadmin
+    profiles: ["propiedadesdelosalpes", "db"]
+    networks:
+      - pulsar
+    ports:
+      - '3306:3306'
+    volumes:
+      - ./data/mysql:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql  
   
   # Servicios de Propiedades de los Alpes
   propiedadesdelosalpes:
@@ -111,6 +133,7 @@ services:
       SidecarDiscover: "false"
     depends_on:
       - broker
+      - db
     environment:
       - PROPIEDADESDELOSALPES_ADDRESS=propiedadesdelosalpes
       - PULSAR_ADDRESS=broker
