--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,15 +10,17 @@ tasks:
       gp sync-done bundle
   - name: Instalar dependencias
     init: gp sync-await bundle
-    command: pip install -r requirements.txt
+    command: pip install -r requirements.txt && pip install -r bff-requirements.txt
   - name: Crear imagenes Docker
     init: > 
       docker build . -f propiedadesdelosalpes.dockerfile -t propiedadesdelosalpes/flask &&
+      docker build . -f bff.dockerfile -t propiedadesdelosalpes/bff &&
       gp sync-done images
   - name: Crear folder para datos y asigna permisos
     init: > 
       mkdir -p data/bookkeeper && 
       mkdir -p data/zookeeper && 
+      mkdir -p data/mysql && 
       sudo chmod -R 777 ./data &&
       sudo chmod -R 777 ./conectors
   - name: Pull el Docker compose
