BFF Implementation Auditorias

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,7 +10,7 @@ tasks:
       gp sync-done bundle
   - name: Instalar dependencias
     init: gp sync-await bundle
-    command: pip install -r requirements.txt
+    command: pip install -r requirements.txt && pip install -r bff-requirements.txt
   - name: Crear imagenes Docker
     init: > 
       docker build . -f auditorias.dockerfile -t auditorias/flask &&
