--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,3 +139,20 @@ services:
       - PULSAR_ADDRESS=broker
     ports:
       - "5000:5000"
+
+  # Servicio BFF
+  bff:
+    container_name: bff
+    hostname: bff
+    image: aeroalpes/bff 
+    profiles: ["aeroalpes", "bff"]
+    depends_on:
+      - aeroalpes
+      - broker
+    environment:
+      - AEROALPES_ADDRESS=aeroalpes
+      - BROKER_HOST=broker
+    networks:
+      - pulsar
+    ports:
+      - "8003:8003"
