--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,7 +13,7 @@ tasks:
     command: pip install -r requirements.txt && pip install -r bff-requirements.txt
   - name: Crear imagenes Docker
     init: > 
-      docker build . -f propiedadesdelosalpes.dockerfile -t propiedadesdelosalpes/flask &&
+      docker build . -f auditorias.dockerfile -t auditorias/flask &&
       docker build . -f bff.dockerfile -t propiedadesdelosalpes/bff &&
       gp sync-done images
   - name: Crear folder para datos y asigna permisos
