--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -145,13 +145,13 @@ services:
     container_name: bff
     hostname: bff
     image: aeroalpes/bff 
-    profiles: ["aeroalpes", "bff"]
+    profiles: ["auditorias", "bff"]
     depends_on:
-      - aeroalpes
+      - auditorias
       - broker
     environment:
-      - AEROALPES_ADDRESS=aeroalpes
-      - BROKER_HOST=broker
+      - PROPIEDADESDELOSALPES_ADDRESS=bff
+      - PULSAR_ADDRESS=broker
     networks:
       - pulsar
     ports:
